--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build_run": "npm run build && ./electron",
     "test": "mocha"
   },
+  "engines": {
+    "node": ">= 6.9.5"
+  },
   "standard": {
     "globals": [
       "it",
